# SalesProPlus

./: .env  .gitignore  pyproject.toml  test.db
backend/: .env  api.py  db_testing.py  insert.sql  products.txt  tables.sql  test.db  test_api.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx
frontend/components/: bottomNavBar.tsx
frontend/icons/: chaticon.tsx  searchicon.tsx  settingsicon.tsx
frontend/src/: middleware.ts
frontend/src/__pages/: _app.tsx  index.tsx
frontend/src/__pages/search/: index.tsx
frontend/src/__pages/start/: startpage.tsx
frontend/src/__pages_old/start/: startpage.tsx
frontend/src/api/search/: productdetails.tsx  search.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: bottomNavBar.tsx  categoryProduct.tsx  layout.tsx  navBar.tsx  searchBar.tsx  searchResult.tsx
frontend/src/icons/: arrowicon.tsx  chaticon.tsx  filterarrowicon.tsx  searchicon.tsx  settingsicon.tsx  uparrowicon.tsx
frontend/src/lib/: BackendConnection.tsx  definitions.tsx  fakeDB.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/chat/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/pages/products/: index.tsx
frontend/src/pages/search/: index.tsx
frontend/src/pages/settings/: index.tsx
frontend/src/pages/start/: startpage.tsx
frontend/src/pages/startpage/: startpage.tsx
frontend/styles/: chat.css  globals.css  scrollbar.css
(+26 files in other folders)
